# wx-play

./: LICENSE  README.md  pyproject.toml
src/wx_play/: __init__.py
