[project]
name = "wx-play"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "David Walker", email = "dbwalker0min@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "wxpython>=4.2.3",
]

[project.scripts]
wx-play = "wx_play:main"

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"
